crates/ens_compile_fail_tests/tests/ui/query_exact_sized_iterator_safety.stderr
error[E0277]: the trait bound `ens::query::Changed<Foo>: ArchetypeFilter` is not satisfied
  --> tests/ui/query_exact_sized_iterator_safety.rs:8:28
   |
8  |     is_exact_size_iterator(query.iter());
   |     ---------------------- ^^^^^^^^^^^^ the trait `ArchetypeFilter` is not implemented for `ens::query::Changed<Foo>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ArchetypeFilter`:
             With<T>
             Without<T>
             Or<()>
             Or<(F0,)>
             Or<(F0, F1)>
             Or<(F0, F1, F2)>
             Or<(F0, F1, F2, F3)>
             Or<(F0, F1, F2, F3, F4)>
           and $N others
   = note: required for `QueryIter<'_, '_, &Foo, ens::query::Changed<Foo>>` to implement `ExactSizeIterator`
note: required by a bound in `is_exact_size_iterator`
  --> tests/ui/query_exact_sized_iterator_safety.rs:16:30
   |
16 | fn is_exact_size_iterator<T: ExactSizeIterator>(_iter: T) {}
   |                              ^^^^^^^^^^^^^^^^^ required by this bound in `is_exact_size_iterator`

error[E0277]: the trait bound `ens::query::Added<Foo>: ArchetypeFilter` is not satisfied
  --> tests/ui/query_exact_sized_iterator_safety.rs:13:28
   |
13 |     is_exact_size_iterator(query.iter());
   |     ---------------------- ^^^^^^^^^^^^ the trait `ArchetypeFilter` is not implemented for `ens::query::Added<Foo>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ArchetypeFilter`:
             With<T>
             Without<T>
             Or<()>
             Or<(F0,)>
             Or<(F0, F1)>
             Or<(F0, F1, F2)>
             Or<(F0, F1, F2, F3)>
             Or<(F0, F1, F2, F3, F4)>
           and $N others
   = note: required for `QueryIter<'_, '_, &Foo, ens::query::Added<Foo>>` to implement `ExactSizeIterator`
note: required by a bound in `is_exact_size_iterator`
  --> tests/ui/query_exact_sized_iterator_safety.rs:16:30
   |
16 | fn is_exact_size_iterator<T: ExactSizeIterator>(_iter: T) {}
   |                              ^^^^^^^^^^^^^^^^^ required by this bound in `is_exact_size_iterator`
